...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DataEntryPage">

    <EditText
        android:id="@+id/mock_input"
        android:layout_width="218dp"
        android:layout_height="77dp"
        android:background="@drawable/textbox1"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Your Value Here"
        android:inputType="number"
        android:padding="20dp"
        android:paddingLeft="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mock_confirm"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

    <Button
...
