...
            android:layout_height="wrap_content"
            android:text="No signal" />

    </LinearLayout>

    <TextView
        android:id="@+id/orientationDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Orientation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compassConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationDisplay"
...
